# HiveLaunch

./: .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL_LICENSE.md  LICENSE  NOTICE  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yml  manual-deploy.yml  mobile-ci-cd.yml  release.yml
.opencode/: oh-my-opencode.jsonc
apps/mobile/src-tauri/: Info.ios.plist
apps/web/: .env.production  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Providers.tsx  Sidebar.tsx  TopNav.tsx
apps/web/hooks/: use-mobile.ts
apps/web/i18n/: config.ts  request.ts
apps/web/messages/: en-US.json  zh-CN.json
apps/web/scripts/: add-static-exports.cjs  static-export-build.cjs  static-export-build.sh
docs/: bee-platform-highlevel.md  remote-access-highlevel.md  remote-access-prd.md  多端架构方案.md
docs/detailed-design/: F1-kanban.md  F2-config.md  F3-agent-execution.md  F4-scaffold.md  F6-token-management.md  P10-settings.md  X1-ai-config-management.md  X2-opencode-config-visualizer-highlevel.md  X2-opencode-config-visualizer-prd.md
docs/remote-access/: connection-modes.md  technology-verification.md
features/: tsconfig.json
features/agent-execution/: README.md
features/agent-execution/api/: sessions.ts
features/agent-execution/contexts/: EntriesContext.tsx  ExecutionProcessesContext.tsx
features/agent-execution/db/: queries.ts
features/agent-execution/hooks/: index.ts  useBranches.ts  useCommit.ts  useCreateSession.ts  useExecutionProcesses.ts  useExecutorDiscovery.ts  useFollowUpSend.ts  useForcePush.ts  useGitBranchStatus.ts  useGitDiffs.ts  useGitMerge.ts  useGitPull.ts  useGitPush.ts  useGitRebase.ts  useJsonPatchWsStream.ts  useProjectBranches.ts  useSessionSend.ts  useTaskExecutionV2.ts  useWorktreeFiles.ts
features/agent-execution/lib/: api-config.ts  cli-parser.ts  conflicts.ts  git-operations.ts  index.ts  jsonPatch.ts  output-parser.ts  promptMessage.ts  session-recovery.ts  token-parser.ts  workspace-creator.ts  worktree-preview.ts
features/agent-execution/runtime/: BeeKanbanRuntime.ts
features/agent-execution/types/: execution-process.ts  index.ts  normalized.ts  stream.ts
features/agent-execution/ui/: AgentSelector.tsx  AgentSelectorButton.tsx  BranchSelector.tsx  CommitDialog.tsx  ConversationHistoryEntries.tsx  DiffsPanel.tsx  ExecutionPanel.tsx  ForcePushDialog.tsx  GitActionsPanel.tsx  GitBranchStatusPanel.tsx  GitPanel.tsx  ResolveConflictsDialog.tsx  index.ts  (+2 more)
features/kanban/: README.md  types.ts
features/scaffold/: README.md
features/settings/: README.md
features/shared/: README.md
features/swarm-config/: README.md
features/token-usage/: README.md
infra/db/: bee_platform.db  bee_platform.db.bak  hivelaunch.db
infra/tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
infra/tauri/src/: http_server.rs  http_server_main.rs  lib.rs  main.rs  swarm_config_io.rs
infra/tauri/src/commands/: agent_execution.rs  execution.rs  git.rs  mod.rs  settings.rs  skills_hub.rs  swarm_config.rs  worktree.rs
infra/tauri/src/executor/: Cargo.toml  approvals.rs  command.rs  env.rs  lib.rs
infra/tauri/src/executor/executors/: mod.rs  opencode.rs
infra/tauri/src/executor/executors/opencode/: normalize_logs.rs  sdk.rs  types.rs
infra/tauri/src/executor/logs/: mod.rs  stderr_processor.rs
infra/tauri/src/executor/logs/utils/: entry_index.rs  patch.rs
infra/tauri/src/executor/workspace_utils/: lib.rs  msg_store.rs  process.rs  shell.rs
infra/tauri/src/process/: agent_manager.rs  manager.rs  mod.rs  worktree.rs
infra/tauri/src/process/db/: execution_process_logs.rs  mod.rs
rules/: ci-cd-rules.md  coding-rules.md  mobile-rules.md  remote-access-rules.md  tech-stack-rules.md  windows-rules.md
(+145 files in other folders)
