[package]
name = "bee-executor"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat", "rt", "codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
command-group = { version = "5.0", features = ["with-tokio"] }
regex = "1.11"
json-patch = "2"
thiserror = "2"
enum_dispatch = "0.3"
futures = "0.3"
futures-io = "0.3"
tokio-stream = { version = "0.1", features = ["io-util", "sync"] }
os_pipe = "1"
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
schemars = { version = "0.8", features = ["derive", "chrono", "uuid1", "preserve_order"] }
dirs = "5"
xdg = "3"
reqwest = { version = "0.12", features = ["json"] }
eventsource-stream = "0.2"
walkdir = "2"
rand = "0.8"
base64 = "0.22"
lru = "0.12"
convert_case = "0.6"
shlex = "1.3"
bon = "3"
sha2 = "0.10"
derivative = "2.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonc-parser = { version = "0.29", features = ["cst", "serde"] }
strum = "0.27"
strum_macros = "0.27"
shellexpand = "3"
bytes = "1"
git2 = "0.20"
nix = { version = "0.27", features = ["process", "fs"] }
similar = "2"
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[target.'cfg(windows)'.dependencies]
kill_tree = { version = "0.2", features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
